--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -22,7 +22,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: name/app
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/app
           tags: |
             type=ref,event=branch
             type=ref,event=pr
